--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -389,7 +389,10 @@
         <item quantity="one">&#160;и &lt;b&gt;%d други&lt;/b&gt; се опитваха да ви проследят тук. &lt;br/&gt;&lt;br/&gt;Блокирах ги!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
         <item quantity="other">&#160;и &lt;b&gt;%d други&lt;/b&gt; се опитваха да ви проследят тук. &lt;br/&gt;&lt;br/&gt;Блокирах ги!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;се опитваше да ви проследи тук. &lt;br/&gt;&lt;br/&gt;Блокирах го!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one">&#160;се опитваше да ви проследи тук. &lt;br/&gt;&lt;br/&gt;Блокирах го!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
+        <item quantity="other">&#160;се опитваха да ви проследи тук. &lt;br/&gt;&lt;br/&gt;Блокирах го!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Докато докосвате и скролвате, ще блокирам досадните тракери. &lt;br/&gt;&lt;br/&gt;Продължавайте - не спирайте да сърфирате!</string>
     <string name="daxMainNetworkOwnedCtaText">Внимание! %s е собственост на %s.&lt;br/&gt;&lt;br/&gt; %s тракери дебнат %s в топ уебсайтове &#128561;, но не се притеснявайте! &lt;br/&gt;&lt;br/&gt;Ще ги блокирам, %s за да не могат да виждат вашата активност в тези сайтове.</string>
     <string name="daxMainNetworkCtaText">Внимание! %s е огромна мрежа за проследяване.&lt;br/&gt;&lt;br/&gt; Техните тракери дебнат %s в топ сайтове &#128561;, но не се притеснявайте! &lt;br/&gt;&lt;br/&gt;Ще ги блокирам, %s за да не виждат вашата активност в тези сайтове.</string>
