--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -399,7 +399,12 @@
         <item quantity="many">&#160;i &lt;b&gt;%d innych&lt;/b&gt; próbowali cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu, aby zobaczyć, kto próbuje cię śledzić, gdy odwiedzasz nową witrynę.️</item>
         <item quantity="other">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu, aby zobaczyć, kto próbuje cię śledzić, gdy odwiedzasz nową witrynę.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;próbował cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one">&#160;próbował cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="few">&#160;próbowali cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="many">&#160;próbowali cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="other">&#160;próbowali cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Kiedy będziesz stukać i przewijać, będę blokować nieznośne moduły śledzące. &lt;br/&gt;&lt;br/&gt;Śmiało - kontynuuj przeglądanie!</string>
     <string name="daxMainNetworkOwnedCtaText">Heads-up! %s jest własnością %s.Moduły śledzące &lt;br/&gt;&lt;br/&gt; %s czają się na około %s najlepszych witrynach &#128561;, ale nie martw się! &lt;br/&gt;&lt;br/&gt;Zablokuję %s Twoją aktywność na tych strony.</string>
     <string name="daxMainNetworkCtaText">Heads-up! %s to duża sieć śledzenia.&lt;br/&gt;&lt;br/&gt; Ich moduły śledzące czają się na około %s najpopularniejszych witryn &#128561;, ale nie martw się! &lt;br/&gt;&lt;br/&gt;Zablokuję %s Twoją aktywność na tych stronach.</string>
