--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -414,7 +414,12 @@
         <item quantity="many">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
         <item quantity="other">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;пытался отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал его!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one" tools:ignore="ImpliedQuantity">&#160;пытался отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал его!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="few">&#160;пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал его!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="many">&#160;пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал его!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+        <item quantity="other">&#160;пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал его!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Когда вы нажмете здесь и прокрутите, я заблокирую надоедливые трекеры. &lt;br/&gt;&lt;br/&gt;Не останавливайтесь - продолжайте просмотр!</string>
     <string name="daxMainNetworkOwnedCtaText">Внимание! %s принадлежит %s.Трекеры &lt;br/&gt;&lt;br/&gt; %s скрываются примерно на %s топ-сайтах &#128561;. Но не волнуйтесь! &lt;br/&gt;&lt;br/&gt;Я не позволю %s видеть ваши действия на этих сайтах.</string>
     <string name="daxMainNetworkCtaText">Внимание! %s является основной сетью отслеживания.&lt;br/&gt;&lt;br/&gt; Их трекеры скрываются примерно на %s топовых сайтах &#128561;. Но не волнуйтесь! &lt;br/&gt;&lt;br/&gt;Я не позволю %s видеть вашу активность на этих сайтах.</string>
