--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -389,7 +389,10 @@
         <item quantity="one">&#160;og &lt;b&gt;%d anden&lt;/b&gt; forsøgte at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</item>
         <item quantity="other">&#160;og &lt;b&gt;%d andre&lt;/b&gt; forsøgte at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;prøvede at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one">&#160;prøvede at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</item>
+        <item quantity="other">&#160;prøvede at spore dig her. &lt;br/&gt;&lt;br/&gt;Jeg blokerede det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollere URL-linjen for at se, hvem der prøver at spore dig, når du besøger et nyt sted.️</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Når du trykker og ruller, blokerer jeg irriterende trackere. &lt;br/&gt;&lt;br/&gt;Gå videre - fortsæt med at browse!</string>
     <string name="daxMainNetworkOwnedCtaText">Pas på! %s ejes af %s.&lt;br/&gt;&lt;br/&gt; %s s trackere lurer på omkring %s af de mest populære websteder &#128561; men bare rolig! &lt;br/&gt;&lt;br/&gt;Jeg blokerer for %s så de ikke kan se din aktivitet på disse sites.</string>
     <string name="daxMainNetworkCtaText">Pas på! %s er et stort sporingsnetværk.&lt;br/&gt;&lt;br/&gt; Deres trackere lurer på omkring %s af de mest populære websteder &#128561; men bare rolig! &lt;br/&gt;&lt;br/&gt;Jeg blokerer for %s så de ikke kan se din aktivitet på disse websteder.</string>
