--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -389,7 +389,10 @@
         <item quantity="one">&#160;et &lt;b&gt;%d autre&lt;/b&gt; essayaient de vous traquer ici.  &lt;br/&gt;&lt;br/&gt;Je les ai bloqués !&lt;br/&gt;&lt;br/&gt; ☝️Vous pouvez voir dans la barre d\'adresse URL qui essaie de vous traquer lorsque vous visitez un nouveau site.️</item>
         <item quantity="other">&#160;et &lt;b&gt;%d autres&lt;/b&gt; essayaient de vous traquer ici. &lt;br/&gt;&lt;br/&gt;Je les ai bloqués !&lt;br/&gt;&lt;br/&gt; ☝️Vous pouvez voir dans la barre d\'adresse URL qui essaie de vous traquer lorsque vous visitez un nouveau site.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;essayait de vous traquer ici. &lt;br/&gt;&lt;br/&gt;Je l\'ai bloqué !&lt;br/&gt;&lt;br/&gt; ☝️Vous pouvez voir dans la barre d\'adresse URL qui essaie de vous traquer lorsque vous visitez un nouveau site.️️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one" tools:ignore="ImpliedQuantity">&#160;essayait de vous traquer ici. &lt;br/&gt;&lt;br/&gt;Je l\'ai bloqué !&lt;br/&gt;&lt;br/&gt; ☝️Vous pouvez voir dans la barre d\'adresse URL qui essaie de vous traquer lorsque vous visitez un nouveau site.️️</item>
+        <item quantity="other">&#160;essayaient de vous traquer ici. &lt;br/&gt;&lt;br/&gt;Je l\'ai bloqué !&lt;br/&gt;&lt;br/&gt; ☝️Vous pouvez voir dans la barre d\'adresse URL qui essaie de vous traquer lorsque vous visitez un nouveau site.️️</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Pendant que vous appuyez et faites défiler, je bloque les trackers ennuyeux. &lt;br/&gt;&lt;br/&gt;Allez-y, continuez à naviguer !</string>
     <string name="daxMainNetworkOwnedCtaText">Attention ! %s appartient à %s.Les trackers de &lt;br/&gt;&lt;br/&gt; %s se cachent sur environ %s des meilleurs sites Web &#128561;, mais ne vous inquiétez pas ! &lt;br/&gt;&lt;br/&gt;Je vais empêcher %s de voir votre activité sur ces sites.</string>
     <string name="daxMainNetworkCtaText">Attention ! %s est un important réseau de localisation.&lt;br/&gt;&lt;br/&gt; Leurs trackers se cachent sur environ %s des meilleurs sites &#128561;, mais ne vous inquiétez pas ! &lt;br/&gt;&lt;br/&gt;Je vais empêcher %s de voir votre activité sur ces sites.</string>
