--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -389,7 +389,10 @@
         <item quantity="one">&#160;és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
         <item quantity="other">&#160;és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one">&#160;itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
+        <item quantity="other">&#160;itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Ahogy megérinti és görgeti, én blokkolni fogom a bosszantó nyomkövetőket. &lt;br/&gt;&lt;br/&gt;Menjen tovább - folytassa a böngészést!</string>
     <string name="daxMainNetworkOwnedCtaText">Fel a fejjel! A(z) %s tulajdonosa a(z) %s.&lt;br/&gt;&lt;br/&gt; %s nyomkövetői ott leselkednek a legfontosabb webhelyek %s oldalán &#128561; de ne aggódjon! &lt;br/&gt;&lt;br/&gt;meg fogom akadályozni, hogy a(z) %s láthassa az Ön tevékenységeit azokon az oldalakon.</string>
     <string name="daxMainNetworkCtaText">Fel a fejjel! A(z) %s egy nagy nyomkövető hálózat.&lt;br/&gt;&lt;br/&gt; A nyomkövetői ott leselkednek a legfontosabb webhelyek %s oldalán &#128561;, de ne aggódjon! &lt;br/&gt;&lt;br/&gt;meg fogom akadályozni, hogy a(z) %s láthassa az Ön tevékenységét azokon a webhelyeken.</string>
