--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -399,7 +399,12 @@
         <item quantity="few">&#160;in &lt;b&gt;%d drugi&lt;/b&gt; so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem jih!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</item>
         <item quantity="other">&#160;in &lt;b&gt;%d drugi&lt;/b&gt; so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem jih!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletno mesto.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;vas je poskušal izslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem ga!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one" tools:ignore="ImpliedQuantity">&#160;vas je poskušal izslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem ga!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</item>
+        <item quantity="two" tools:ignore="ImpliedQuantity">&#160;so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem ga!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</item>
+        <item quantity="few">&#160;so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem ga!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</item>
+        <item quantity="other">&#160;so vas poskušali zaslediti tukaj. &lt;br/&gt;&lt;br/&gt;Blokiral sem ga!&lt;br/&gt;&lt;br/&gt; ☝️Preverite lahko URL vrstico, da vidite, kdo vas poskuša zaslediti, ko obiščete novo spletišče.</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Ko tapkate in se pomikate, bom blokiral nadležne sledilce. &lt;br/&gt;&lt;br/&gt;Brskaj naprej!</string>
     <string name="daxMainNetworkOwnedCtaText">Glavo pokonci! %s je last %s.&lt;br/&gt;&lt;br/&gt; %s sledilci se skrivajo na približno %s najboljših spletnih mest &#128561;, vendar ne skrbite!&lt;br/&gt;&lt;br/&gt; %s bom preprečil ogled vaše dejavnosti na teh spletnih mestih.</string>
     <string name="daxMainNetworkCtaText">Glavo pokonci! %s je glavno omrežje za sledenje.&lt;br/&gt;&lt;br/&gt; Njihovi sledilci se skrivajo na približno %s najboljših spletnih mest, vendar ne skrbite!&lt;br/&gt;&lt;br/&gt; %s bom preprečil ogled vaše dejavnosti na teh spletnih mestih.</string>
