--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -405,7 +405,10 @@
         <item quantity="one">&#160;och &lt;b&gt;%d andra&lt;/b&gt; försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</item>
         <item quantity="other">&#160;och &lt;b&gt;%d andra&lt;/b&gt; försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade dem!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</string>
+    <plurals name="daxTrackersBlockedCtaZeroText">
+        <item quantity="one">&#160;försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</item>
+        <item quantity="other">&#160;försökte spåra dig här. &lt;br/&gt;&lt;br/&gt;Jag blockerade det!&lt;br/&gt;&lt;br/&gt; ☝️Du kan kontrollera webbadressfältet för att se vem som försöker spåra dig när du besöker en ny webbplats.️</item>
+    </plurals>
     <string name="daxNonSerpCtaText">Medan du pekar och bläddrar kommer jag att blockera irriterande spårare. &lt;br/&gt;&lt;br/&gt;Fortsätt - surfa vidare!</string>
     <string name="daxMainNetworkOwnedCtaText">Se upp! %s ägs av %s.&lt;br/&gt;&lt;br/&gt; %ss spårare ligger och lurar på cirka %s av de populäraste webbplatserna &#128561; men oroa dig inte! &lt;br/&gt;&lt;br/&gt;Jag kommer att hindra %s från att se din aktivitet på dessa webbplatser.</string>
     <string name="daxMainNetworkCtaText">Se upp! %s är ett stort spårningsnätverk.&lt;br/&gt;&lt;br/&gt; Deras spårare ligger och lurar på cirka %s av de populäraste webbplatserna &#128561; men oroa dig inte! &lt;br/&gt;&lt;br/&gt;Jag kommer att hindra %s från att se din aktivitet på dessa webbplatser.</string>
